[package]
authors = ["Nihal Pasham <nihal.pasham@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic I2C driver for Microchip's Crypto Authentication HW (i.e. secure element `ATECC608A`), written in pure Rust."
documentation = "https://docs.rs/Rusty_CryptoAuthLib"
edition = "2018"
homepage = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
keywords = ["ATECC608A", "Microchip-driver", "Security", "Crypto", "Authentication"]
license = "MIT OR Apache-2.0"
name = "Rusty_CryptoAuthLib"
readme = "README.md"
repository = "https://github.com/nihalpasham/Rusty_CryptoAuthLib.git"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convertto-proc-macro = {path = "./convertto-proc-macro", version = "0.1.0"}
embedded-hal = "0.2.4"
heapless = "0.5.5"
nb = "1.0.0"
postcard = "0.5.0"
defmt = { git = "https://github.com/knurling-rs/defmt", rev = "574f77f05f0d72f905c8955cb7a652fb4f91726e" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "574f77f05f0d72f905c8955cb7a652fb4f91726e" }
panic-probe = { git = "https://github.com/knurling-rs/defmt", features = ["print-defmt"], rev = "574f77f05f0d72f905c8955cb7a652fb4f91726e" }



[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.114"

[features]
default = ["rt", "defmt-default"]
rt = ["nrf52840-hal/rt"]

# default = [
#   "defmt-default", # "dependency-a/defmt-trace",
# ]

# do NOT modify these features
defmt-debug = []
defmt-default = []
defmt-error = []
defmt-info = []
defmt-trace = []
defmt-warn = []

[profile.dev]
debug = 2 # default is `true`; not needed if not already overridden

[profile.release]
debug = 2 # default is `false`; using `true` is also OK

[patch.crates-io]
nrf-hal-common = {version = "0.12.0", path = '/home/aditya/Desktop/Rusty_CryptoAuthLib/nrf-hal/nrf-hal-common'}

[dev-dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
nrf52840-hal = "0.10.0"
nrf52840-mdk = {path = "/home/aditya/Desktop/Rusty_CryptoAuthLib/nrf52840-mdk-rs"}
panic-halt = "0.2.0"

